chore: add portable pre-commit hook

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
+    "setup-hooks": "mkdir -p .git/hooks && cp scripts/pre-commit.sh .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit",
     "preview": "vite preview"
   },
   "dependencies": {
